# Stat-discute.be

./: .gitignore  ANALYSE_ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODEBASE_ANALYSIS.md  IOS_DEVELOPMENT_GUIDE.md  README.md  UI_MOCKUP_STYLEGUIDE.html  analyze_ps3838_requests.py  explore_json.py  get_game_url.py  nba-betting-analysis-over-under.html  nba_stats_api_endpoints.md  package-lock.json  package.json  process_markdown.py  tailwind.config.ts  temp_endpoints.md
betting-agent/: CLAUDE.md  PLAN_PLAYER_PROPS.md  ROADMAP.md  pyproject.toml
betting-agent/data/: agent_memory.db  bref_positions.json
betting-agent/data/charts/: opponent_scoring_ATL_20251128.json  points_by_position_ATL_20251128.json  position_c_ATL_20251128.json  position_c_ATL_last18_20251128.json  position_c_LAL_20251128.json  position_pf_ATL_20251128.json  position_pf_ATL_last18_20251128.json  position_pf_LAL_20251128.json  position_pg_ATL_20251128.json  position_pg_ATL_last18_20251128.json  position_pg_ATL_last20_20251128.json  position_pg_LAL_20251128.json  position_sf_ATL_20251128.json  (+7 more)
betting-agent/scripts/: analyze_single_game.py  analyze_today_totals.py  backtest_v4_full_season.py  export_totals_chart.py  fetch_bref_positions.py  fetch_rotowire_lineups.py  generate_bet_report.py  generate_bet_report_fr.py  generate_position_report.py  generate_props_report.py  setup_mcp.sh  update_player_positions.py
betting-agent/src/: __init__.py  main.py
betting-agent/tests/: __init__.py  conftest.py  test_debate_room.py  test_e2e.py  test_memory.py  test_narrative.py  test_quant_analyst.py
(+868 files in other folders)
