[project]
name = "nba-bettor-agent"
version = "0.1.0"
description = "System 2 Autonomous NBA Betting Agent with Deep Reasoning"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.0",
    "nba_api>=1.4",
    "httpx>=0.27",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "python-dotenv>=1.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.4",
]

[project.scripts]
nba-agent = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
